--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-react": "^0.9.0",
     "jest": "^0.1.37",
     "jquery": "2.1.1",
+    "node-jsx": "^0.11.0",
     "react": "^0.11.1",
     "xtuple-rest-client": "0.0.x"
   },
