--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "jquery": "2.1.1",
     "node-jsx": "^0.11.0",
     "react": "^0.11.1",
-    "xtuple-rest-client": "0.0.x"
+    "xtuple-rest-client": "0.0.x",
+    "react-tools": "^0.11.1"
   },
   "devDependencies": {
     "jest-cli": "^0.1.18",
-    "react-tools": "^0.11.1",
     "grunt-cli": "^0.1.13"
   }
 }
